# yis-Cli

./: Cargo.toml  README.md  YIS_CLI.md  clippy.toml  rust-toolchain.toml
.github/workflows/: release.yml
crates/codegen/xai-acp-lib/src/: normalize.rs
crates/codegen/xai-agent-lifecycle/src/: lib.rs
crates/codegen/xai-chat-state/: Cargo.toml
crates/codegen/xai-chat-state/src/: commands.rs  compaction_mode.rs  compaction_transcript.rs  compaction_utils.rs  conversation_util.rs  handle.rs  lib.rs  persistence.rs  types.rs  usage.rs
crates/codegen/xai-codebase-graph/: Cargo.toml
crates/codegen/xai-codebase-graph/src/: index_manager.rs
crates/codegen/xai-crash-handler/src/: handler.rs  symbolicate.rs
crates/codegen/xai-fast-worktree/src/: api.rs  discovery.rs  lib.rs  mount_info.rs
crates/codegen/xai-file-utils/: Cargo.toml
crates/codegen/xai-file-utils/src/: gcs.rs  lib.rs  queue.rs  s3.rs  storage_client.rs  workspace_classifier.rs
crates/codegen/xai-fsnotify/benches/: startup.rs
crates/codegen/xai-fsnotify/examples/: watch_stats.rs
crates/codegen/xai-fsnotify/src/: event.rs  lib.rs  source.rs  watcher.rs
crates/codegen/xai-gix-status/src/: lib.rs
crates/codegen/xai-hooks-plugins-types/src/: lib.rs
crates/codegen/xai-hunk-tracker/src/: lib.rs
crates/codegen/xai-mixpanel/: Cargo.toml
crates/codegen/xai-mixpanel/src/: lib.rs
crates/codegen/xai-prompt-queue/: Cargo.toml
crates/codegen/xai-prompt-queue/src/: lib.rs
crates/codegen/xai-sqlite-journal/: Cargo.toml
crates/codegen/xai-yis-agent/: Cargo.toml  README.md
crates/codegen/xai-yis-agent/src/: agent.rs  builder.rs  config.rs  discovery.rs  lib.rs  repo.rs  system_reminder.rs  timing.rs
crates/codegen/xai-yis-agent/src/plugins/: discovery.rs  git_install.rs  hooks_adapter.rs  install_registry.rs  local_refresh.rs  manifest.rs  mod.rs  registry.rs  trust.rs
crates/codegen/xai-yis-agent/src/prompt/: agents_md.rs  context.rs  ignore.rs  prompt_encrypted.rs  skills.rs  template.rs  user_message.rs
crates/codegen/xai-yis-agent/templates/: apply_patch_prompt.md  prompt.md  subagent_prompt.md
crates/codegen/xai-yis-announcements/: Cargo.toml  generate.sh
crates/codegen/xai-yis-auth/: Cargo.toml
crates/codegen/xai-yis-config/: Cargo.toml
crates/codegen/xai-yis-config-types/: Cargo.toml
crates/codegen/xai-yis-config-types/src/: flags.rs  lib.rs  mcp.rs  memory.rs  permission.rs  pool.rs
crates/codegen/xai-yis-env/: Cargo.toml
crates/codegen/xai-yis-hooks/: Cargo.toml
crates/codegen/xai-yis-http/: Cargo.toml
crates/codegen/xai-yis-http/src/: lib.rs
crates/codegen/xai-yis-markdown/: Cargo.toml
crates/codegen/xai-yis-markdown-core/: Cargo.toml
crates/codegen/xai-yis-mcp/: Cargo.toml
crates/codegen/xai-yis-memory/: Cargo.toml
crates/codegen/xai-yis-mermaid/: Cargo.toml
crates/codegen/xai-yis-models/: Cargo.toml  default_models.json
crates/codegen/xai-yis-pager/: Cargo.toml  README.md  build.rs
crates/codegen/xai-yis-pager-bin/: Cargo.toml
crates/codegen/xai-yis-pager-minimal/: Cargo.toml
crates/codegen/xai-yis-pager-pty-harness/: Cargo.toml
crates/codegen/xai-yis-pager-render/: Cargo.toml
crates/codegen/xai-yis-paths/: Cargo.toml
crates/codegen/xai-yis-plugin-marketplace/: Cargo.toml
crates/codegen/xai-yis-sampler/: Cargo.toml
crates/codegen/xai-yis-sampling-types/: Cargo.toml
crates/codegen/xai-yis-sampling-types/src/: conversation.rs  error.rs  lib.rs  types.rs
crates/codegen/xai-yis-sandbox/: Cargo.toml
crates/codegen/xai-yis-secrets/: Cargo.toml
crates/codegen/xai-yis-shared/: Cargo.toml
crates/codegen/xai-yis-shell/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/codegen/xai-yis-shell-base/: Cargo.toml
crates/codegen/xai-yis-shell-session-support/: Cargo.toml
crates/codegen/xai-yis-subagent-resolution/: Cargo.toml
crates/codegen/xai-yis-subagent-resolution/src/: config.rs  context.rs  lib.rs  overrides.rs  resume.rs
crates/codegen/xai-yis-telemetry/: Cargo.toml
crates/codegen/xai-yis-test-support/: Cargo.toml  README.md
crates/codegen/xai-yis-tools/: Cargo.toml  THIRD_PARTY_NOTICES.md  build.rs
crates/codegen/xai-yis-tools-api/: Cargo.toml  build.rs
crates/codegen/xai-yis-update/: Cargo.toml
crates/codegen/xai-yis-version/: Cargo.toml  build.rs
crates/codegen/xai-yis-voice/: Cargo.toml
crates/codegen/xai-yis-workspace/: Cargo.toml
crates/codegen/xai-yis-workspace-client/: Cargo.toml
crates/codegen/xai-yis-workspace-types/: Cargo.toml
crates/common/xai-tool-runtime/: Cargo.toml
crates/common/xai-yis-compaction/: Cargo.toml
docs/: 使用手册.md  本地开发与运维.md
prod/mc/cli-chat-proxy-types/: Cargo.toml
qoder-switch/: README.md  presets.json  qoder-switch
scripts/: build-release-local.sh  install-yis.ps1  install-yis.sh
(+1240 files in other folders)
