[package]
edition.workspace = true
license = "Apache-2.0"
name = "xai-prompt-queue"
version = "0.1.0"
description = "Shared prompt-queue wire types for xai-yis-shell and xai-yis-pager"

[dependencies]
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
