[package]
license = "Apache-2.0"
name = "xai-yis-config-types"
version = "0.1.0"
edition.workspace = true
description = "Leaf configuration value types for the Yis CLI, extracted from xai-yis-shell for dependency inversion."

[dependencies]
agent-client-protocol = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
xai-yis-announcements = { workspace = true }
xai-yis-config = { workspace = true }
xai-yis-mcp = { workspace = true }

[features]
default-bazel = []

[lints]
workspace = true
