[package]
license = "Apache-2.0"
name = "xai-yis-http"
version = "0.1.0"
edition.workspace = true
description = "Shared reqwest HTTP clients and User-Agent construction for the Yis CLI."

[dependencies]
reqwest = { workspace = true, features = ["blocking"] }
reqwest-middleware = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
xai-yis-auth = { workspace = true, features = ["middleware"] }
xai-yis-sampler = { path = "../xai-yis-sampler" }
xai-yis-telemetry = { workspace = true }
xai-yis-version = { workspace = true }
xai-yis-workspace = { workspace = true }

[lints]
workspace = true
